# CRender

./: CMakeLists.txt  CMakeSettings.json  README.md  opengl_linux_install.sh  valgrind_external_libs.supp
.github/: linuxinstall.sh
.github/workflows/: cmake.yml
CRenderExtensions/ImageService/ComputeShaders/: sampler.comp
CRenderExtensions/ImageService/Headers/: Image.h
CRenderExtensions/ImageService/src/: Image.cpp
CRenderExtensions/Lighting/ComputeShaders/: FullVoxelFill.comp  MeshSphereDecomposition.comp  SH_VoxelVis.comp  SH_preciseMesh.comp  VoxelizeMesh.comp
CRenderExtensions/Lighting/Headers/: LightingModel.h  SH.h  SH_VoxelGrid.h
CRenderExtensions/Lighting/Shaders/: SH.frag  SH.vert  shadowMask.frag
CRenderExtensions/Lighting/src/: LightingModel.cpp
Headers/: Action.h  Camera.h  ComputeShader.h  EBO.h  Engine3D.h  EngineConfig.h  GeomInstance.h  GeometryBasics.h  GeometryLoader.h  GeometryOrganizer.h  Instance.h  MultiArray.h  Request.h  Scene.h  Texture.h  Tile.h  VAO.h  VBO.h  Window.h  precompile.h  shaderClass.h  stl_reader.h
Libraries/glfw/: README.md
Libraries/include/TinyTIFF/: CMakeLists.txt
Libraries/include/glad/: glad.h
Libraries/lib/glfw/win-msvc/: glfw3.lib
Shaders/: default.frag  default.vert  instance.frag  instance.vert  shadow.frag  shadow.vert
examples/: Cube.cpp  CubeNoComments.cpp  CubeTransform.cpp  GraphCalculator.cpp  LoadCubesSinCosTest.cpp  TransformationsShowcase.cpp  Translation.cpp
resources/: BASEmodel.stl
src/: Camera.cpp  ComputeShader.cpp  EBO.cpp  Engine3D.cpp  GeomInstance.cpp  GeometryBasics.cpp  GeometryLoader.cpp  GeometryOrganizer.cpp  Instance.cpp  Main.cpp  Scene.cpp  Texture.cpp  Tile.cpp  VAO.cpp  VBO.cpp  Window.cpp  glad.c  shaderClass.cpp
